--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nwplay/core",
-  "version": "1.0.0",
+  "version": "0.0.1-alpha.2",
   "main": "src/index.ts",
   "ngPackage": {
     "$schema": "../../../node_modules/ng-packagr/ng-package.schema.json",
