--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: apt-get install wine -y
+      - run: sudo apt-get install wine -y
       - run: npm i
       - run: npm run dist
       - uses: actions/upload-artifact@v2
