--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 12
+      - run: sudo dpkg --add-architecture i386
       - run: sudo apt-get install wine-stable wine32 -y
       - run: npm i
       - run: npm run dist
