--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,10 @@ jobs:
         with:
           node-version: 12
       - run: sudo dpkg --add-architecture i386
-      - run: sudo apt-get install wine-stable wine32 -y
+      - run: wget -O - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
+      - run: sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
+      - run: sudo apt update
+      - run: sudo apt install --install-recommends winehq-stable
       - run: npm i
       - run: npm run dist
       - uses: actions/upload-artifact@v2
