--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
@@ -15,7 +15,7 @@ jobs:
           node-version: 12
       - run: sudo dpkg --add-architecture i386
       - run: wget -O - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
-      - run: sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
+      - run: sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ bionic main'
       - run: sudo apt update
       - run: sudo apt install --install-recommends winehq-stable
       - run: npm i
