Added windows installer.

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "appId": "org.nwplay.ui",
     "packed": false,
     "targets": [
-      "zip"
+      "zip",
+      "nsis"
     ],
     "overriddenProperties": {
       "main": "index.html"
