--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,3 +40,11 @@ jobs:
         with:
           name: windows-x64
           path: dist/apps/dist/*win-x64*.zip
+      - uses: actions/upload-artifact@v2
+        with:
+          name: windows-x64-install
+          path: dist/apps/dist/*win-x64*.exe
+      - uses: actions/upload-artifact@v2
+        with:
+          name: windows-x86-install
+          path: dist/apps/dist/*win-x86*.exe
