--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,19 +7,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
           node-version: 12
-      - run: sudo dpkg --add-architecture i386
-      - run: wget -O - https://dl.winehq.org/wine-builds/winehq.key | sudo apt-key add -
-      - run: sudo add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ focal main'
-      - run: sudo apt update
-      - run: sudo apt install -y -o APT::Immediate-Configure=false --install-recommends winehq-stable -y
       - run: npm i
       - run: npm run dist
+      - run: node tools/createWindowsSetup
       - uses: actions/upload-artifact@v2
         with:
           name: macos-x64
@@ -39,11 +35,11 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: windows-x64
-          path: dist/apps/dist/*win-x64*.zip
+          path: dist/apps/dist/**/*win-x64*.zip
       - uses: actions/upload-artifact@v2
         with:
           name: windows-x64-install
-          path: dist/apps/dist/*win-x64*.exe
+          path: dist/apps/dist/**/*win-x64*.exe
       - uses: actions/upload-artifact@v2
         with:
           name: windows-x86-install
