Many style changes Improved plugin handling

--- a/package.json
+++ b/package.json
@@ -103,8 +103,10 @@
     "overlayscrollbars-ngx": "^0.2.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.4",
+    "semver": "^7.3.2",
     "sortablejs": "^1.10.2",
     "systemjs": "^6.3.2",
+    "uuid": "^8.2.0",
     "videogular2": "^7.0.2",
     "zone.js": "^0.10.2"
   },
@@ -118,8 +120,18 @@
     "@nrwl/jest": "9.4.3",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "9.4.3",
+    "@types/cheerio": "^0.22.20",
+    "@types/eslint": "6.8.0",
+    "@types/hls.js": "^0.13.0",
     "@types/jest": "25.1.4",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^8.10.61",
+    "@types/overlayscrollbars": "^1.12.0",
+    "@types/prettier": "2.0.2",
+    "@types/semver": "^7.3.1",
+    "@types/sortablejs": "^1.10.4",
+    "@types/systemjs": "^6.1.0",
+    "@types/uuid": "^8.0.0",
     "codelyzer": "~5.0.1",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
