--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -6,6 +6,7 @@
       "jest"
     ],
     "resolveJsonModule": true,
+    "allowJs": true,
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
