--- a/package.json
+++ b/package.json
@@ -86,6 +86,10 @@
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
+    "@capacitor-community/http": "^0.2.1",
+    "@capacitor/cli": "^2.2.1",
+    "@capacitor/core": "^2.2.1",
+    "@capacitor/ios": "^2.2.1",
     "@ncstate/sat-popover": "^4.0.0",
     "@ngx-translate/core": "^12.1.2",
     "@nrwl/angular": "9.4.3",
