--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "angular2-hotkeys": "^2.2.0",
     "cheerio": "^1.0.0-rc.3",
     "class-transformer": "^0.2.3",
+    "commander": "^5.1.0",
     "dashjs": "^3.1.1",
     "dropbox": "^5.1.0",
     "hls.js": "^0.13.2",
@@ -122,14 +123,16 @@
     "@angular/language-service": "^9.1.0",
     "@nrwl/cypress": "9.4.3",
     "@nrwl/jest": "9.4.3",
+    "@nrwl/node": "9.5.1",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/workspace": "9.4.3",
     "@types/cheerio": "^0.22.20",
+    "@types/copy-webpack-plugin": "^6.0.0",
     "@types/eslint": "6.8.0",
     "@types/hls.js": "^0.13.0",
     "@types/jest": "25.1.4",
     "@types/lodash": "^4.14.157",
-    "@types/node": "^8.10.61",
+    "@types/node": "^12.12.6",
     "@types/overlayscrollbars": "^1.12.0",
     "@types/prettier": "2.0.2",
     "@types/semver": "^7.3.1",
@@ -137,9 +140,11 @@
     "@types/systemjs": "^6.1.0",
     "@types/uuid": "^8.0.0",
     "codelyzer": "~5.0.1",
+    "copy-webpack-plugin": "^6.0.3",
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
+    "generate-package-json-webpack-plugin": "^1.1.2",
     "jest": "25.2.3",
     "jest-preset-angular": "8.1.2",
     "ng-packagr": "^9.1.5",
