--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     },
     "nsis": {
       "icon": "./assets/Icon.ico"
-    }
+    },
+    "mirror": "http://dl.nwjs.io/live-build/nw46/20200710-003549/1fc2cba92"
   },
   "private": true,
   "distDependencies": [
