--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -1,10 +1,16 @@
 {
   "name": "@nwplay/core",
-  "version": "0.0.1-alpha.9",
+  "version": "0.0.1-alpha.10",
   "main": "src/index.ts",
   "ngPackage": {
     "$schema": "../../../node_modules/ng-packagr/ng-package.schema.json",
     "dest": "../../dist/nwplay-core",
+    "assets": [
+      "./assets"
+    ],
+    "whitelistedNonPeerDependencies": [
+      "."
+    ],
     "lib": {
       "entryFile": "src/index.ts",
       "umdModuleIds": {
@@ -13,7 +19,26 @@
       }
     }
   },
+  "bin": {
+    "build-nwplay-plugin": "./assets/build.js",
+    "serve-nwplay-plugin": "./assets/serve.js"
+  },
   "peerDependencies": {
     "rxjs": "~6.5.4"
+  },
+  "dependencies": {},
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-multi-entry": "^3.0.1",
+    "@rollup/plugin-node-resolve": "^8.1.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "@types/cheerio": "^0.22.21",
+    "rollup": "^2.21.0",
+    "rollup-plugin-license": "^2.1.0",
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^6.1.0",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "typescript": "^3.9.6"
   }
 }
