Added play from url feature

--- a/libs/core/tsconfig.json
+++ b/libs/core/tsconfig.json
@@ -5,7 +5,8 @@
     "types": [
       "node",
       "jest"
-    ]
+    ],
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "**/*.ts"
