--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,3 +92,20 @@ jobs:
         with:
           name: windows-x86-install
           path: dist/apps/dist/*win-x86*.exe
+  copy-artifacts:
+    name: Copy Artifacts
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/download-artifact@v2
+        id: download
+      - name: Upload Artifacts
+      - name: copy file
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.KEY }}
+          source: "etc/usr/artifacts/**/*.zip"
+          target: "/var/www/dl.nwplay.org/live-builds/test"
