--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -1,15 +1,25 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "types": [
-      "node",
-      "jest"
-    ],
+    "types": ["node", "jest"],
     "resolveJsonModule": true,
     "allowJs": true,
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
     "enableIvy": false
-  }
+  },
+  "files": [],
+  "include": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./tsconfig.editor.json"
+    }
+  ]
 }
