--- a/libs/core/tsconfig.lib.prod.json
+++ b/libs/core/tsconfig.lib.prod.json
@@ -5,13 +5,8 @@
     "target": "es2015",
     "declaration": true,
     "inlineSources": true,
-    "types": [
-      "node"
-    ],
-    "lib": [
-      "dom",
-      "es2018"
-    ]
+    "types": ["node"],
+    "lib": ["dom", "es2018"]
   },
   "angularCompilerOptions": {
     "skipTemplateCodegen": true,
@@ -19,8 +14,6 @@
     "enableResourceInlining": true,
     "enableIvy": false
   },
-  "exclude": [
-    "src/test-setup.ts",
-    "**/*.spec.ts"
-  ]
+  "exclude": ["src/test-setup.ts", "**/*.spec.ts"],
+  "include": ["**/*.ts"]
 }
