--- a/package.json
+++ b/package.json
@@ -77,23 +77,23 @@
     "cheerio"
   ],
   "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.2.4",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/material": "^9.2.4",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
+    "@angular/animations": "^11.0.2",
+    "@angular/cdk": "^11.0.0",
+    "@angular/common": "^11.0.2",
+    "@angular/compiler": "^11.0.2",
+    "@angular/core": "^11.0.2",
+    "@angular/forms": "^11.0.2",
+    "@angular/material": "^11.0.0",
+    "@angular/platform-browser": "^11.0.2",
+    "@angular/platform-browser-dynamic": "^11.0.2",
+    "@angular/router": "^11.0.2",
     "@capacitor-community/http": "^0.2.1",
     "@capacitor/cli": "^2.2.1",
     "@capacitor/core": "^2.2.1",
     "@capacitor/ios": "^2.2.1",
     "@ncstate/sat-popover": "^4.0.0",
     "@ngx-translate/core": "^12.1.2",
-    "@nrwl/angular": "9.4.3",
+    "@nrwl/angular": "10.4.4",
     "angular2-hotkeys": "^2.2.0",
     "cheerio": "^1.0.0-rc.3",
     "class-transformer": "^0.2.3",
@@ -108,7 +108,7 @@
     "overlayscrollbars": "^1.12.0",
     "overlayscrollbars-ngx": "^0.2.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.5.4",
+    "rxjs": "~6.5.5",
     "semver": "^7.3.2",
     "sortablejs": "^1.10.2",
     "systemjs": "^6.3.2",
@@ -117,19 +117,21 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.901.0",
-    "@angular-devkit/build-ng-packagr": "^0.901.8",
-    "@angular/cli": "9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
-    "@angular/language-service": "^9.1.0",
-    "@nrwl/cypress": "9.4.3",
-    "@nrwl/jest": "9.4.3",
+    "@angular-devkit/build-angular": "0.1100.2",
+    "@angular-devkit/build-ng-packagr": "~0.1001.3",
+    "@angular/cli": "11.0.2",
+    "@angular/compiler-cli": "^11.0.2",
+    "@angular/language-service": "^11.0.2",
+    "@nrwl/cli": "10.4.4",
+    "@nrwl/cypress": "10.4.4",
+    "@nrwl/jest": "10.4.4",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "9.4.3",
+    "@nrwl/tao": "10.4.4",
+    "@nrwl/workspace": "10.4.4",
     "@types/cheerio": "^0.22.20",
     "@types/eslint": "6.8.0",
     "@types/hls.js": "^0.13.0",
-    "@types/jest": "25.1.4",
+    "@types/jest": "26.0.8",
     "@types/lodash": "^4.14.157",
     "@types/node": "^8.10.61",
     "@types/overlayscrollbars": "^1.12.0",
@@ -142,14 +144,14 @@
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
-    "jest": "25.2.3",
-    "jest-preset-angular": "8.1.2",
-    "ng-packagr": "^9.1.5",
+    "jest": "26.2.2",
+    "jest-preset-angular": "8.3.1",
+    "ng-packagr": "^10.1.0",
     "nwjs-builder-phoenix": "^1.15.0",
     "prettier": "2.0.4",
-    "ts-jest": "25.2.1",
+    "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "typescript": "~3.8.3"
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.5"
   }
 }
