--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -38,6 +38,7 @@
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^6.1.0",
     "rollup-plugin-typescript2": "^0.27.1",
+    "tslib": "^2.0.0",
     "typescript": "^3.9.6",
     "uuid": "^8.2.0"
   }
