--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "productName": "NWPlay",
-  "version": "4.0.0-alpha.6",
+  "version": "4.0.0-beta.1",
   "license": "AGPL-3.0-or-later",
   "identifier": "org.nwplay.ui",
   "description": "A Cross-platform Cloud Media Player",
@@ -97,11 +97,11 @@
     "angular2-hotkeys": "^2.2.0",
     "cheerio": "^1.0.0-rc.3",
     "class-transformer": "^0.2.3",
-    "dashjs": "^3.1.1",
+    "dashjs": "^3.2.0",
     "dexie": "^3.0.1",
     "dropbox": "^5.1.0",
-    "hls.js": "^0.13.2",
-    "lodash": "^4.17.15",
+    "hls.js": "^0.14.17",
+    "lodash": "^4.17.20",
     "material-design-icons-iconfont": "^5.0.1",
     "ng2-right-click-menu": "^1.1.3",
     "ngx-pipes": "^2.7.3",
@@ -144,9 +144,11 @@
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
+    "fs-extra": "^9.0.1",
+    "got": "^11.8.1",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
-    "ng-packagr": "^10.1.0",
+    "ng-packagr": "^11.0.3",
     "nwjs-builder-phoenix": "^1.15.0",
     "prettier": "2.0.4",
     "ts-jest": "26.4.0",
