--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14
-      - run: npm i
+      - run: npm ci
       - run: npx nx build --prod
       - run: node ./tools/post.build.js
       - uses: actions/upload-artifact@v2
