--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,6 @@
             "main": "apps/ui/src/main.ts",
             "polyfills": "apps/ui/src/polyfills.ts",
             "tsConfig": "apps/ui/tsconfig.app.json",
-            "aot": true,
             "assets": [
               "apps/ui/src/assets",
               "apps/ui/src/favicon.ico",
@@ -36,7 +35,7 @@
               }
             ],
             "styles": [
-              "node_modules/videogular2/fonts/videogular.css",
+              "node_modules/@videogular/ngx-videogular/fonts/videogular.css",
               "node_modules/material-design-icons-iconfont/dist/material-design-icons.css",
               "apps/ui/src/styles.scss"
             ],
@@ -46,7 +45,13 @@
               "node_modules/systemjs/dist/system.js",
               "node_modules/systemjs/dist/extras/named-register.js",
               "node_modules/systemjs/dist/extras/amd.js"
-            ]
+            ],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "capacitor": {
@@ -73,7 +78,8 @@
               "vendorChunk": false,
               "buildOptimizer": true
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
