--- a/package.json
+++ b/package.json
@@ -77,23 +77,24 @@
     "cheerio"
   ],
   "dependencies": {
-    "@angular/animations": "^11.0.2",
-    "@angular/cdk": "^11.0.0",
-    "@angular/common": "^11.0.2",
-    "@angular/compiler": "^11.0.2",
-    "@angular/core": "^11.0.2",
-    "@angular/forms": "^11.0.2",
-    "@angular/material": "^11.0.0",
-    "@angular/platform-browser": "^11.0.2",
-    "@angular/platform-browser-dynamic": "^11.0.2",
-    "@angular/router": "^11.0.2",
+    "@angular/animations": "^12.1.3",
+    "@angular/cdk": "^12.1.3",
+    "@angular/common": "^12.1.3",
+    "@angular/compiler": "^12.1.3",
+    "@angular/core": "^12.1.3",
+    "@angular/forms": "^12.1.3",
+    "@angular/material": "^12.1.3",
+    "@angular/platform-browser": "^12.1.3",
+    "@angular/platform-browser-dynamic": "^12.1.3",
+    "@angular/router": "^12.1.3",
     "@capacitor-community/http": "^0.2.1",
     "@capacitor/cli": "^2.2.1",
     "@capacitor/core": "^2.2.1",
     "@capacitor/ios": "^2.2.1",
     "@ncstate/sat-popover": "^4.0.0",
     "@ngx-translate/core": "^12.1.2",
-    "@nrwl/angular": "10.4.4",
+    "@nrwl/angular": "12.5.9",
+    "@videogular/ngx-videogular": "^4.0.1",
     "angular2-hotkeys": "^2.2.0",
     "cheerio": "^1.0.0-rc.3",
     "class-transformer": "^0.2.3",
@@ -114,20 +115,20 @@
     "systemjs": "^6.3.2",
     "uuid": "^8.2.0",
     "videogular2": "^7.0.2",
-    "zone.js": "^0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1100.2",
+    "@angular-devkit/build-angular": "12.1.3",
     "@angular-devkit/build-ng-packagr": "~0.1001.3",
-    "@angular/cli": "11.0.2",
-    "@angular/compiler-cli": "^11.0.2",
-    "@angular/language-service": "^11.0.2",
-    "@nrwl/cli": "10.4.4",
-    "@nrwl/cypress": "10.4.4",
-    "@nrwl/jest": "10.4.4",
+    "@angular/cli": "12.1.3",
+    "@angular/compiler-cli": "^12.1.3",
+    "@angular/language-service": "^12.1.3",
+    "@nrwl/cli": "12.5.9",
+    "@nrwl/cypress": "12.5.9",
+    "@nrwl/jest": "12.5.9",
     "@nrwl/nx-cloud": "latest",
-    "@nrwl/tao": "10.4.4",
-    "@nrwl/workspace": "10.4.4",
+    "@nrwl/tao": "12.5.9",
+    "@nrwl/workspace": "12.5.9",
     "@types/cheerio": "^0.22.20",
     "@types/eslint": "6.8.0",
     "@types/hls.js": "^0.13.0",
@@ -148,12 +149,12 @@
     "got": "^11.8.1",
     "jest": "26.2.2",
     "jest-preset-angular": "8.3.1",
-    "ng-packagr": "^11.0.3",
+    "ng-packagr": "^12.1.2",
     "nwjs-builder-phoenix": "^1.15.0",
-    "prettier": "2.0.4",
+    "prettier": "2.3.2",
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.3.5"
   }
 }
