--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,14 +87,14 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: windows-x64-install
-          path: dist/apps/dist/**/*win-x64*.exe
+          path: dist/apps/dist/**/*win-x64*.msi
       - uses: actions/upload-artifact@v2
         with:
           name: windows-x86-install
           path: dist/apps/dist/*win-x86*.exe
   create-release:
     needs: [ build-win, build-macos, build-linux ]
-    name: Release
+    name: "Pre Release"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -105,7 +105,7 @@ jobs:
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
-          prerelease: false
+          prerelease: true
           title: "Development Build"
           files: |
             artifacts/**/*.zip
