Fixed prod build

--- a/apps/ui/tsconfig.json
+++ b/apps/ui/tsconfig.json
@@ -7,7 +7,7 @@
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": true
   },
   "files": [],
   "include": [],
