--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,8 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true
+            "namedChunks": true,
+            "aot": true
           },
           "configurations": {
             "capacitor": {
