Fixed Windows installer

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,11 +87,11 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: windows-x64-install
-          path: dist/apps/dist/**/*win-x64*.exe
+          path: dist/apps/dist/*win-x64*.exe
       - uses: actions/upload-artifact@v2
         with:
           name: windows-x86-install
-          path: dist/apps/dist/**/*win-x64*.exe
+          path: dist/apps/dist/*win-x64*.exe
   create-release:
     needs: [ build-win, build-macos, build-linux ]
     name: "Pre Release"
